# dataslate-parser

./: .codeclimate.yml  .dockerignore  .drone.yml  .gitignore  .pre-commit-config.yaml  .tool-versions  .travis.yml  CLAUDE.md  Dockerfile  Pipfile  README.md  catalog-info.yaml  coverage.xml  docker-compose.yaml  dockerfile  dockerfile.dev  main.py  okteto.yml  pyproject.toml  requirements-dev.txt  requiremnets-dev.txt  requiremnets.txt  serve_static.sh  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: backend.yml  build.yml  cleanup.yml  deploy.yaml  frontend.yml  preview.yml  pythonpackage.yml  rollback.yaml
.pytest_cache/v/cache/: nodeids
.run/: run-all-tests.run.xml  run-app.run.xml
app/: constants.py  data_prep.py  data_prep_test.py  game_type_parser.py  game_type_parser_test.py  gametype.py  gametype_parser.py  gametype_parser_test.py  kt_unit_parser.py  kt_unit_parser_test.py  main.py  main_test.py  parser.py  parser_test.py  test_main.py  unit.py  unit_parser.py  unit_parser_test.py
app/gametypes/: gametype.py  killteam.py  warhammer30k.py  warhammer40k.py
app/models/: abilities.py  armor_facing.py  characteristics.py  file_upload.py  heresy_unit.py  heresy_unit_group.py  killteam.py  killteam_unit.py  kt_model.py  kt_unit.py  model.py  unit.py  unit_group.py  weapon.py
app/models/kt_models/: kt_unit.py
app/parsers/: heresy.py  heresy_new.py  heresy_old.py  heresy_test.py  killteam.py  killteam_test.py  parser.py  test_utils.py
app/parsers/gametype/: gametype.py  gametype_test.py
app/parsers/heresy/: heresy.py  heresy_constants.py  heresy_test.py  rules_summary.py
app/parsers/killteam/: killteam.py  killteam_test.py
app/parsers/kt_parser/: killteam.py  killteam_test.py  kt_parser.py  kt_parser_test.py  kt_unit_parser.py  kt_unit_parser_test.py
app/renderers/: killteam.py
app/static/css/: multiple_pages.css  sandbox.css  single_page.css  styles.css
app/static/templates/: 40k_example.html  heresy.html  home.html  item.html  killteam.html  sandbox.html
app/templates/: kill_team_roster.html  sandbox.html
app/tests/: heresy_test.py  killteam_test.py  test_main.py  test_utils.py
app/tests/parsers/: heresy_test.py  killteam_test.py
app/tests/renderers/: killteam_renderer_test.py  killteam_test.py
app/utils/: battlescribe_meta.py  constants.py  gametype_test.py  test_utils.py  zip_utils.py  zip_utils_test.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/components/: HelloWorld.vue
frontend/src/views/: About.vue  Home.vue
src/: main.py  main_test.py
src/models/: armor_facing.py  heresy_unit.py  killteam_unit.py  rules.py  unit.py  unit_group.py  w40k_unit.py
src/parsers/heresy/: heresy.py  heresy_constants.py  heresy_parsing_test.py  heresy_test.py
src/parsers/killteam/: killteam.py  killteam_test.py
src/parsers/w40k/: w40k.py  w40k_test.py
src/static/assets/wh40k/: warhammer40k.css  warhammer40k.eot
src/static/css/: styles.css
src/static/templates/: heresy.html  home.html  icons_w40k.html  killteam.html  w40k.html
src/utils/: battlescribe_meta.py  constants.py  gametype.py  gametype__test.py  gametype_test.py  logger_manager.py  test_utils.py  zip_utils.py  zip_utils_test.py
test_rosters/dark_imperium/: 2k_dark_eldar_comp.ros
test_rosters/horus_heresy/: 1_5k_night_lords_cent_nova_2.ros  2021_9_5_test_roster.ros  all_dedicated_transports.ros  all_dedicated_transports.rosz  dread_claw_transport.ros  dread_claw_transport.rosz  drop_pod_dt.ros  drop_pod_dt.rosz  hh_test_cortus_dread_only.ros  hh_test_cortus_dread_only.rosz  hh_test_dread_only.ros  hh_test_dread_only.rosz  hhv2.custodes_zm.ros  hhv2.mechanicum_zm.ros  hhv2.nightlords_zm.ros  hhv2.solar_aux_zm.ros  land_raider_phobos_dt.ros  land_raider_phobos_dt.rosz  legion_astartes_roster_new.ros  mech_hamslam_ZM.ros  parser_test_full_list.ros  porch_slam_saux.ros  tac_squad_with_dt.ros  tactical_squad_with_transport.ros  tactical_squad_with_transport.rosz  test_hh.ros  test_hh.rosz  test_hh_vehicles.ros  test_hh_vehicles.rosz  updated_legions_roster_8_19-20.ros  wargear_fix.ros
test_rosters/kill_team/: brood_coven_kt.ros  cadre_mercenary_kt.ros  chaos_killteam.ros  chaos_roster.ros  dark_eldar_kt.ros  death_guard_test_with_commander.ros  death_guard_test_with_commander.rosz  elite_roster.ros  orc_kommando_kt.ros  psychic_roster_kt.ros  sm_reiver_kt.ros  t_sons.ros  test_roster_chaos_new.ros  test_roster_commander.ros  vet_guard.ros
test_rosters/unzipped/: test.ros
test_rosters/w40k/: death_guard1.ros  ultramar_test1.ros  ultramar_test2.ros
test_rosters/zipped/: test.rosz
test_rosters/zipped_rosters/: elite_roster.rosz
