[project]
name = "dataslate-parser"
version = "0.1.0"
description = "a module for parsing battlescribe rosters and allowing them to be printed or displayed cleanly"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.127.0",
    "httpx>=0.28.1",
    "jinja2-fragments>=1.11.0",
    "jinja2>=3.1.6",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=7.0.0",
    "pytest-random-order>=1.1.1",
    "pytest-sugar>=1.1.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.5"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-vv --random-order"

[tool.coverage.run]
omit = [
    '*/.local/*',
    '__init__.py',
    'tests/*',
    '*/tests/*',
    '.venv/*',
    '*/migrations/*',
    '*_test.py',
    "src/utils/logger_manager.py",
]

[tool.ruff]
line-length = 120
exclude = [
    ".eggs",
    ".git",
    ".pytype",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    ".venv",
]
lint.ignore = [
    "B008",    # function-call-in-default-argument (B008)
    "S101",    # Use of `assert` detected
    "RET504",  # Unnecessary variable assignment before `return` statement
    "PLR2004", # Magic value used in comparison, consider replacing {value} with a constant variable
    "ARG001",  # Unused function argument: `{name}`
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "ISC001",  # Checks for implicitly concatenated strings on a single line
]
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # Pyflakes
    "N",   # pep8-naming
    "RET", # flake8-return
    "S",   # flake8-bandit
    "W",   # pycodestyle
    "Q",   # flake8-quotes
    "C90", # mccabe
    "I",   # isort
    "UP",  # pyupgrade
    "BLE", # flake8-blind-except
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PT",  # flake8-pytest-style
    "PIE", # flake8-pie
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # Pylint
    "NPY", # NumPy-specific rules
    "PLE", # Pylint
    "PLR", # Pylint
    "PLW", # Pylint
    "RUF", # Ruff-specific rules
    "PD",  # pandas-vet
]
